# tor

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  setup_magnet_handler.sh
bittorrent/: bencode.py  dht.py  lsd.py  magnet.py  main.py  messages.py  metadata.py  peer.py  peer_manager.py  piece_manager.py  seeder.py  storage.py  torrent.py  tracker.py  utp.py  webseed.py
tests/: test_bencode.py  test_dht.py  test_lsd.py  test_magnet.py  test_main.py  test_messages.py  test_peer.py  test_peer_manager.py  test_piece_manager.py  test_seeder.py  test_storage.py  test_torrent.py  test_tracker.py  test_utp.py  test_webseed.py
