[project]
name = "bittorrent-client"
version = "0.1.0"
description = "A BitTorrent client built from scratch in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "aiofiles>=23.0",
    "rich>=15.0.0",
]

[project.scripts]
bittorrent = "bittorrent.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bittorrent"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
